<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_android">Welcome to android</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="tambs">TAMBS</string>
    <string name="website">Website</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="registration_form">Registration Form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile NO</string>
    <string name="dob">DOB</string>
    <string name="password_">Password</string>
    <string name="followers">Followers</string>
    <string name="welcome_to_silverwing">Welcome To Silverwing</string>
    <string name="maratha_harris">MARATHA HARRIS</string>
    <string name="_8_5">8.5</string>
    <string name="follows">Follows</string>
    <string name="_1766">1766</string>
    <string name="_8825">8825</string>
    <string name="follow">Follow</string>
    <string name="android">Android</string>
    <string name="php">Php</string>
    <string name="java">Java</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="edit_text">Edit Text</string>
    <string name="text_view">Text View</string>
    <string name="sum_of_two_numbers">Sum Of two numbers</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="sum">Sum</string>
    <string name="enter_email1">Enter Email</string>
    <string name="log_in">Log IN</string>
    <string name="toogle_status">Toogle Status:</string>
    <string name="switch_status">Switch Status:</string>
    <string name="seek_status">Seek Status:</string>
    <string name="welcome">Welcome</string>
    <string name="post">Post</string>
    <string name="photos">Photos</string>
    <string name="following">Following</string>
    <string name="_1_3k">1.3K</string>
    <string name="_17_8k">17.8K</string>
    <string name="posts">Posts</string>
    <string name="_1_5k">1.5K</string>
    <string name="ux_designer">UX Designer</string>
    <string name="priyanshu_desai">Priyanshu Desai</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_">navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="phonetype">
        <item>Phone Type</item>
        <item>Priyanshu</item>
        <item>Kaushal</item>
        <item>Kaushik</item>
    </string-array>
    <string-array name="emailtype">
        <item>Email Type</item>
        <item>Gmail</item>
        <item>Yahoo</item>
        <item>Outlook</item>
    </string-array>
    <string-array name="planets_array">
        <item name="1">Mercury</item>
        <item name="1">Venus</item>
        <item name="1">Earth</item>
        <item name="1">Mars</item>
        <item name="1">Jupiter</item>
        <item name="1">Saturn</item>
        <item name="1">Uranus</item>
        <item name="1">Neptune</item>
    </string-array>
    <string name="title_activity_map">Map</string>

    <array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research and Development</item>
        <item>Marketing</item>
        <item>Human Resource</item>
    </array>
</resources>
