<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_30sdp"
        android:text="@string/sum_of_two_numbers"/>
    <EditText
        android:id="@+id/add2no_firstnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:textSize="@dimen/_25sdp"
        android:inputType="number"
        android:layout_marginTop="@dimen/_20sdp"/>
    <EditText
        android:id="@+id/add2no_secondnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:textSize="@dimen/_25sdp"
        android:inputType="number"
        android:layout_marginTop="@dimen/_20sdp"/>
    <Button
        android:id="@+id/add2no_sum_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_25sdp"
        android:background="@drawable/capsual_button"/>
</LinearLayout>