<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_30sdp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/icon_earth"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view"
                android:textSize="@dimen/_30sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view"
                android:textSize="@dimen/_30sdp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_30sdp">
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/icon_insta"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/_30sdp"
            android:hint="@string/edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_30sdp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:checked="true"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/php"
                android:checked="true"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:checked="true"/>
        </LinearLayout>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:entries="@array/planets_array"
        >
    </Spinner>
</LinearLayout>

