<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_marginTop="@dimen/_20sdp"
           android:textSize="@dimen/_30sdp"
           android:text="@string/registration_form"
           />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/inputtypecapsual"
                android:layout_margin="@dimen/_10sdp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/inputtypecapsual"
                android:layout_margin="@dimen/_10sdp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/inputtypecapsual"
                android:layout_margin="@dimen/_10sdp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/inputtypecapsual"
                android:layout_margin="@dimen/_10sdp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:inputType="date"
                android:maxLines="1"
                android:background="@drawable/inputtypecapsual"
                android:textSize="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/inputtypecapsual"
                android:textSize="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"/>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/capsual_button"/>
    </LinearLayout>
</LinearLayout>