<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/profile_r1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@color/colorblue">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_p_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/p_logo"
                android:background="@color/colorblue"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/profile_pd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priyanshu_desai"
                android:layout_below="@+id/profile_p_logo"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ux_designer"
                android:layout_below="@+id/profile_pd"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"/>
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_5k"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_8k"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Followers"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_3k"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorgray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_15sdp"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_17sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/logo_nature"
                android:paddingHorizontal="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/icon_earth"
                android:paddingHorizontal="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/icon_flower"
                android:paddingHorizontal="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/p_logo"
                android:paddingHorizontal="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/icon_umbrella"
                    android:paddingHorizontal="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/icon_coffee"
                    android:paddingHorizontal="@dimen/_5sdp"/>
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/icon_car"
                    android:paddingHorizontal="@dimen/_5sdp"/>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"/>
        </LinearLayout>
</LinearLayout>
</ScrollView>