<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        >
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic_android_black_24dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:text="@string/welcome_to_android"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/intent_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email1"
                android:textSize="@dimen/_18sdp"
                android:maxLines="1"
                android:fontFamily="casual"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/_20sdp"
                />
        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/intent_login_password"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:hint="@string/password"

        android:textSize="@dimen/_18sdp"
        android:layout_margin="@dimen/_20sdp"
        android:inputType="textPassword"
        android:fontFamily="casual"/>
</com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/intent_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="@dimen/_22sdp"
            android:fontFamily="casual"
            android:background="@drawable/capsual_button"
            android:layout_margin="@dimen/_36sdp"
            />
    </LinearLayout>

</LinearLayout>

</LinearLayout>
